[package]
name = "cli-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tikv-jemallocator = "0.5"


[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
memmap2 = "0.9.10"
rand = "0.8"
memchr = "2"
arrayvec = "0.7"


[[bench]]
name = "kv_bench"
harness = false